--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,16 +6,20 @@ html {
 }
 
 body::-webkit-scrollbar {
-  width: 6px; /* width of the entire scrollbar */
+  width: 6px;
+  /* width of the entire scrollbar */
 }
 
 body::-webkit-scrollbar-track {
-  background: #292929; /* color of the tracking area */
+  background: #292929;
+  /* color of the tracking area */
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #0099ff; /* color of the scroll thumb */
-  border-radius: 15px; /* roundness of the scroll thumb */
+  background-color: #0099ff;
+  /* color of the scroll thumb */
+  border-radius: 15px;
+  /* roundness of the scroll thumb */
 }
 
 
@@ -130,7 +134,7 @@ ol li {
 .section-title {
   font-family: 'Alkatra', cursive;
   font-size: 120px;
-  color: #fff !important ;
+  color: #fff !important;
   line-height: 52px;
   font-weight: 400;
   text-align: center;
@@ -273,10 +277,12 @@ ol li {
 .about-content ul li {
   font-size: 18px;
 }
+
 .about-text p {
   font-size: 20px;
   letter-spacing: 0.5px;
 }
+
 .btn-border {
   color: #212121;
   background-color: transparent;
@@ -526,12 +532,14 @@ a.back-to-top:focus {
 }
 
 @-webkit-keyframes sk-circleBounceDelay {
+
   0%,
   80%,
   100% {
     -webkit-transform: scale(0);
     transform: scale(0);
   }
+
   40% {
     -webkit-transform: scale(1);
     transform: scale(1);
@@ -539,12 +547,14 @@ a.back-to-top:focus {
 }
 
 @keyframes sk-circleBounceDelay {
+
   0%,
   80%,
   100% {
     -webkit-transform: scale(0);
     transform: scale(0);
   }
+
   40% {
     -webkit-transform: scale(1);
     transform: scale(1);
@@ -606,6 +616,7 @@ a.back-to-top:focus {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -615,6 +626,7 @@ a.back-to-top:focus {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -702,7 +714,7 @@ a.back-to-top:focus {
   position: relative;
 }
 
-.navbar-expand-lg .navbar-nav li > a:before {
+.navbar-expand-lg .navbar-nav li>a:before {
   content: '';
   position: absolute;
   top: 19px;
@@ -732,7 +744,7 @@ a.back-to-top:focus {
 }
 
 .navbar-expand-lg .navbar-nav li a:hover,
-.navbar-expand-lg .navbar-nav li .active > a,
+.navbar-expand-lg .navbar-nav li .active>a,
 .navbar-expand-lg .navbar-nav li a:focus {
   background-image: linear-gradient(65deg, #2b72ad 0, #0099ff 50%);
   -webkit-background-clip: text;
@@ -861,22 +873,27 @@ a.back-to-top:focus {
     background: #fff !important;
     box-shadow: 0px 3px 6px 3px rgba(0, 0, 0, 0.06);
   }
+
   .section-title {
     color: white;
   }
+
   .navbar-expand-lg .navbar-brand,
   .navbar-expand-lg .navbar-toggler {
     margin: 0px 15px;
   }
+
   .navbar-nav {
     padding: 5px 15px;
   }
+
   .navbar-expand-lg .navbar-nav .nav-link {
     margin-top: 0;
     margin-bottom: 0;
     padding: 0px 40px;
     color: #212121;
   }
+
   .about-text p {
     font-size: 16px;
   }
@@ -887,19 +904,24 @@ a.back-to-top:focus {
     background: #1c1c1c !important;
     box-shadow: 0px 3px 6px 3px rgba(0, 0, 0, 0.06);
   }
+
   .navbar-expand-lg .navbar-brand,
   .navbar-expand-lg .navbar-toggler {
     margin: 0px 15px;
   }
+
   .section-title {
     color: white;
   }
+
   h2.section-title.wow.fadeInUp {
     color: aliceblue;
   }
+
   .navbar-nav {
     padding: 5px 15px;
   }
+
   .navbar-expand-lg .navbar-nav .nav-link {
     margin-top: 0;
     margin-bottom: 0;
@@ -912,9 +934,11 @@ a.back-to-top:focus {
     margin-top: 20px;
     text-align: center;
   }
+
   .section-title {
     font-size: 30px !important;
   }
+
   #sponsor-heading {
     font-size: 40px !important;
   }
@@ -929,7 +953,7 @@ a.back-to-top:focus {
   display: table;
 }
 
-.about-content > div {
+.about-content>div {
   vertical-align: middle;
   display: table-cell;
 }
@@ -1098,6 +1122,7 @@ h1 {
 .counter-section .counter .icon i {
   color: #fff !important;
 }
+
 .counter-section .counter .icon {
   background-image: linear-gradient(65deg, #2b72ad 0, #0099ff 50%) !important;
 }
@@ -1105,6 +1130,7 @@ h1 {
 .video-text {
   text-align: center;
 }
+
 .video-text i {
   color: #fff !important;
 }
@@ -1352,10 +1378,12 @@ h1 {
   flex: 0 0 18%;
   max-width: 18%;
 }
+
 #information-bar .inforation-wrapper i {
   background-image: linear-gradient(65deg, #2b72ad 0, #0099ff 50%);
   font-weight: 700;
 }
+
 .schedule .card-header {
   position: relative;
   padding: 35px 40px 35px 224px;
@@ -2161,6 +2189,7 @@ footer {
 .social-icons-footer .facebook a:hover {
   border-color: #2b4ead;
 }
+
 .social-icons-footer .facebook a i,
 .social-icons-footer .twitter a i,
 .social-icons-footer .pinterest a i {
@@ -2482,6 +2511,7 @@ footer {
   background: #fff;
   color: #212121;
 }
+
 .blog-item .icon,
 .hack-desc {
   display: none;
@@ -2492,7 +2522,7 @@ footer {
 ========================================================================== */
 .hero-area-bg {
   /* background: url(../img/hero-area.jpg) no-repeat; */
-  /* background: url(../img/background/bgop.png) no-repeat; */  
+  /* background: url(../img/background/bgop.png) no-repeat; */
   background-size: cover;
   background-position: center center;
   height: 110vh;
@@ -2544,6 +2574,7 @@ img#nav-logo {
   color: #fff;
   margin-top: 25px;
 }
+
 #hero-area .contents .banner-btn {
   margin-top: 35vh;
 }
@@ -2576,9 +2607,11 @@ img#nav-logo {
 #clock {
   font-size: 30px;
 }
+
 #clock {
   margin-bottom: 80px;
 }
+
 #clock div {
   text-align: center;
   margin: 10px;
@@ -2619,6 +2652,7 @@ div#clock {
 #hero-image {
   display: none;
 }
+
 @media (max-width: 720px) {
   .hero-area-bg {
     /* background: url(../img/hero-area.jpg) no-repeat; */
@@ -2628,15 +2662,17 @@ div#clock {
     height: 100vh;
   }
 
-  #hero-register {
-  }
+  #hero-register {}
+
   #hero-image {
     display: block;
   }
+
   #hero-area .contents .banner-btn {
     margin-top: 0px;
   }
 }
+
 @media (max-width: 445px) {
   .hero-area-bg {
     /* background: url(../img/hero-area.jpg) no-repeat; */
@@ -2645,15 +2681,18 @@ div#clock {
     background-position: center;
     height: 100vh;
   }
-  #hero-register {
-  }
+
+  #hero-register {}
+
   #hero-image {
     display: block;
   }
+
   #hero-area .contents .banner-btn {
     margin-top: 0px;
   }
 }
+
 @media (max-width: 768px) {
   #count .count-wrapper {
     margin-top: 100px;
@@ -2662,25 +2701,31 @@ div#clock {
     color: white;
     padding-bottom: 30px;
   }
+
   #clock div {
     width: 70px;
     padding: 10px 0;
     margin: 10px 8px;
   }
+
   #clock div h3 {
     font-size: 28px;
     margin-bottom: 10px;
   }
+
   #clock div h4 {
     font-size: 14px;
     font-weight: 500;
   }
+
   #nav-container {
     background: #1c1c1c;
   }
+
   .about-content ul li {
     font-size: 17px !important;
   }
+
   .prize-desc {
     display: block !important;
   }
@@ -2690,16 +2735,19 @@ h2#last-stats {
   color: white;
   margin-bottom: 20px;
 }
+
 img#footer-logo {
   width: 100px;
   margin-top: 50px;
 }
+
 /* section#faq {
   background-color: #fcfd9b;
 } */
 div#clock {
   margin-bottom: 0;
 }
+
 section#count {
   height: 0;
 }
@@ -2713,96 +2761,121 @@ section#count {
   margin-bottom: 50px;
   color: #000 !important;
 }
+
 /* Dark Theme */
 section#about {
   background: #000;
   color: #fff;
 }
+
 section#information-bar {
   background: #000;
 }
+
 section#domains,
 section#prizes {
   background: #000;
 }
+
 p.wow.fadeInDown.animated,
 h2.section-title.wow.fadeInUp.animated,
 #sponsors .section-title-header {
   color: #fff;
   font-size: 20px;
 }
+
 #information-bar .inforation-wrapper {
   background: #1c1c1c;
 }
+
 #information-bar .inforation-wrapper {
   background-image: linear-gradient(0deg, #000 0, #000c44 100%);
 }
+
 #information-bar ul li span b {
   color: aliceblue;
 }
+
 span {
   color: white;
 }
+
 section#schedules,
 section#faq {
   background: #000;
 }
+
 .schedule .nav-tabs .nav-link,
 div#headingOne,
 div#headingOne1,
 div#headingOne3 {
   background: #1c1c1c;
 }
+
 .schedule .show .card-body {
   background: #333333;
 }
+
 .schedule .card-header h4,
 p,
 h3 {
   color: white;
 }
+
 .schedule .card-header .name {
   color: beige;
 }
+
 .schedule .nav-tabs .nav-link,
 #information-bar .inforation-wrapper,
 .blog-item .icon {
   box-shadow: 0 8px 24px #000;
 }
+
 .schedule .item-text h4 {
   color: white;
 }
+
 .schedule .item-text h5 {
   color: aliceblue;
 }
+
 .schedule .schedule-tab-content .tab-content,
 #contact-text .contact-wrapper {
   box-shadow: 0 8px 24px #000;
 }
+
 .blog-item .descr {
   background: #1c1c1c;
   color: whitesmoke;
 }
+
 .blog-item .descr h3 a {
   color: white;
 }
+
 section#contact-text,
 footer {
   background: #000;
 }
+
 #contact-text .contact-wrapper {
   background: #1c1c1c;
 }
+
 .single-intro-text {
   box-shadow: 0 8px 24px #000;
   background: #1c1c1c;
 }
+
 .single-intro-text:hover {
   box-shadow: 0 8px 24px #2c2c2c;
 }
+
 .blog-item {
   box-shadow: 0 8px 24px #000;
 }
+
 .blog-item:hover {
   box-shadow: 0 8px 24px #2c2c2c;
 }
@@ -2810,12 +2883,15 @@ footer {
 .top-nav-collapse {
   background: #0f0f0f !important;
 }
+
 .top-nav-collapse .navbar-nav .nav-link {
   color: #fff !important;
 }
+
 i {
-  color: #2b72ad !important ;
+  color: #2b72ad !important;
 }
+
 h2.section-title.wow.fadeInUp.animated {
   font-size: 40px;
 }
@@ -2823,6 +2899,7 @@ h2.section-title.wow.fadeInUp.animated {
 li.stylish-list {
   font-size: 40px;
 }
+
 .prize-desc {
   display: none;
 }
