--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -84,6 +84,9 @@ ol li {
   list-style: none;
 }
 
+#count1{
+  display: none;
+}
 
 
 
@@ -881,6 +884,7 @@ a.back-to-top:focus {
 
 /* only small tablets */
 @media (min-width: 768px) and (max-width: 991px) {
+  
   .bg-inverse {
     background: #fff !important;
     box-shadow: 0px 3px 6px 3px rgba(0, 0, 0, 0.06);
@@ -912,6 +916,22 @@ a.back-to-top:focus {
 }
 
 @media (max-width: 991px) {
+  
+  .mainlandvideo{
+    /* width: 100vw; */
+    /* height: 12vh; */
+    padding: 1px;
+    margin: 0;
+  }
+  .banner-btn{
+    padding-top: 0;
+  }
+  #count{
+    display: none;
+  }
+  #count1{
+    display: block;
+  }
   .bg-inverse {
     background: #1c1c1c !important;
     box-shadow: 0px 3px 6px 3px rgba(0, 0, 0, 0.06);
@@ -2666,6 +2686,7 @@ div#clock {
 }
 
 @media (max-width: 720px) {
+  
   .hero-area-bg {
     /* background: url(../img/hero-area.jpg) no-repeat; */
     /* background: url(../img/background/onlybg.png) no-repeat !important; */
@@ -2686,6 +2707,7 @@ div#clock {
 }
 
 @media (max-width: 445px) {
+  
   .hero-area-bg {
     /* background: url(../img/hero-area.jpg) no-repeat; */
     /* background: url(../img/background/onlybg.png) no-repeat !important; */
@@ -2706,6 +2728,21 @@ div#clock {
 }
 
 @media (max-width: 768px) {
+  .mainlandvideo{
+    /* width: 10vw; */
+    height: 12vh;
+    padding: 10vw;
+  }
+  .banner-btn{
+    padding-top: 0px;
+  }
+  #count{
+    display: none;
+  }
+  #count1{
+    display: block;
+  }
+  
   #count .count-wrapper {
     margin-top: 100px;
     top: -200px;
